<resources>
    <string name="app_name">calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="num1">Número 1</string>
    <string name="num2">Número 2</string>
    <string name="soma">Soma</string>
    <string name="sub">Subtração</string>
    <string name="mult">Multiplicação</string>
    <string name="div">Divisão</string>
    <string name="result">Resultado</string>
</resources>
