<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name_program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.117" />

    <Button
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="375dp" />

    <Button
        android:id="@+id/mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mult"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="146dp"
        tools:layout_editor_absoluteY="432dp" />

    <Button
        android:id="@+id/soma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soma"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="318dp" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num1"
        android:inputType="number"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="159dp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/num2"
        android:inputType="number"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="238dp" />

    <Button
        android:id="@+id/div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/div"
        android:textSize="12sp"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="488dp" />

    <EditText
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="number"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="568dp" />

</androidx.constraintlayout.widget.ConstraintLayout>